--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ pre code {
 @font-face {
   font-family: 'Bravura Text'; /* https://github.com/steinbergmedia/bravura */
   /*font-weight: 400;
-  font-style: normal;
-  font-display: swap;*/
+  font-style: normal;*/
+  font-display: swap;
   src: url('fonts/bravuratext.eot');
     src: url('fonts/bravuratext.eot?#iefix') format('embedded-opentype'),
     url('fonts/bravuratext.woff') format('woff'),
@@ -27,6 +27,14 @@ pre code {
 .music {
   font-family: 'Bravura Text', 'Helvetica Neue';
   font-size: .85em;
+}
+
+.note {
+  font-size: 2.5em;
+  line-height: 0.5em;
+  vertical-align: baseline;
+  position: relative;
+  top: 0.15em;
 }
 
 .italic {
